<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#181A21"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Giriş" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/giris" />
            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Mum grafik formasyonları nasıl kullanılır?" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/mum_grafik"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView3"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Boğa Dönüş Formasyonları" />
            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Çekiç" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/hammer"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/hammer"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView456"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Ters Çekiç" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/inhammer"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/inhamer"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView4677"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Üç Beyaz Asker" />

            <ImageView
                android:id="@+id/imageViewaa"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/threewhite"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView6556"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/threewhite"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView46d77"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Harami Boğa" />
            <ImageView
                android:id="@+id/imageViewsaa"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/harami"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView655s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/harami"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>