<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0c0d13"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >




            <TextView
                android:id="@+id/textView3"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Üçgenler" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/üçgen"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Yükselen Üçgen" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/triangle_y"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/triancle_y"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView456"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Alçalan Üçgen" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/triancle_a"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/triancle_a"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView4677"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="Simetrik Üçgen" />

            <ImageView
                android:id="@+id/imageViewaa"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/simetrik"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView6556"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/simetrik"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"/>




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>