<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0c0d13"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >




            <TextView

                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="İkili Tepe ve İkili Dip" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ikilitepe"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="İkili Tepe" />


            <ImageView

                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/ikili"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/ikilitepee"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="İkili Dip" />
            <ImageView

                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/dip"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/dip"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"/>




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>